--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bemjson-to-html",
+  "name": "bem-json-to-html",
   "version": "0.3.1",
   "description": "BEMJSON to HTML serializer",
   "main": "index.js",
