--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "bem-json-to-html",
-  "version": "0.3.1",
+  "version": "0.3.3",
   "description": "BEMJSON to HTML serializer",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R spec"
+    "test": "mocha -R spec",
+    "bundle": "browserify index.js --s BEMJSON > bundle.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   "homepage": "https://github.com/pvoznyuk/bemjson-to-html",
   "devDependencies": {
     "bh": "^3.2.2",
+    "browserify": "^14.5.0",
     "enb": "^0.13.4",
     "matcha": "^0.6.0",
     "mocha": "^2",
